# Collaborative-Filtering-Recommender-System

./: .flake8  .gitignore  .pre-commit-config.yaml  COMMITS_GUIDE.md  EXPERIMENTS.md  README.md  pyproject.toml
.github/workflows/: main.yml
notebooks/: 1.0 - Data_Exploration.ipynb  1.0-Data_Exploration.ipynb  1.5-Data_Exploration.ipynb  2.0-Prototyping.ipynb  2.5-Movie_Prototyping.ipynb
services/: app.py
src/: dataset.py  logger_config.py  model.py  movie_dataset.py  movie_model.py  movie_train.py  train.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_📚_Books.py  2_🎬_Movies.py
utils/: book_recommender.py  movie_recommender.py  recommender.py
