[project]
name = "collaborative-filtering-recommender-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Ordinary33",email = "husnie.baddie@g.msuiit.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
