[project]
name = "collaborative-filtering-recommender-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Ordinary33",email = "husnie.baddie@g.msuiit.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "joblib (>=1.5.3,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
torch = {source = "pytorch_cu126"}
torchvision = {source = "pytorch_cu126"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nbstripout (>=0.8.2,<0.9.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "notebook (>=7.5.1,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[[tool.poetry.source]]
name = "pytorch_cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"